--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -351,6 +351,9 @@
  RUS_alexei.3.t:0 "The Last Man Standing"
  RUS_alexei.3.d:0 "placeholder"
  RUS_alexei.3.a:0 "placeholder"
+ RUS_alexei.4.t:0 "The Greatest Undertaking"
+ RUS_alexei.4.d:0 "placeholder"
+ RUS_alexei.4.a:0 "placeholder"
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -1209,6 +1212,13 @@
   ########################## 
   # TOOLTIPS
   ##########################
+
+  # ALEXEI TOOLTIPS #
+  PB_RUS_alexei_tooltip_1:0 "With the state secured, we can finally move to establish our §G'New World Order'§!"
+  PB_RUS_alexei_tooltip_2:0 "§LWe shall spring forth into the open world!§!"
+
+
+
   RUS_alexei_twenty_tt:0 "§GAlexei's§!  influence will grow by 20."
   RUS_alexei_and_kirill_five_tt:0 "§GAlexei§!  and  §gKirill's§!  influence will grow by 5."
   RUS_alexandra_five_tt:0 "§OAlexandra's§!  influence will grow by 5."
@@ -1442,3 +1452,5 @@
  # Alexei Flags #
  PB_RUS_alexei_wins:0 "Alexei has Initiated his Coup"
  PB_RUS_alexei_loses:0 "Alexei has been toppled in a Counter-Coup"
+ PB_RUS_alexei_last_man_standing:0 "Alexei and his White Guard have Quelled Dissent"
+ PB_RUS_alexei_foreign_policy:0 "Russia Stands Ready to Pursue its Ultimate Goal"
