--- a/localisation/PB_News_Events_l_english.yml
+++ b/localisation/PB_News_Events_l_english.yml
@@ -317,8 +317,8 @@
   PBNews.82.a:0 "What comes next?"
 
   PBNews.83.t:0 "FRANCE MARCHES TO BRITTANY"
-  PBNews.83.d:0 ""  
-  PBNews.83.a:0 "What will france do next?"
+  PBNews.83.d:0 "One of the major promises made by the French government was the reclamation of the nation of Brittany. As a result of this, many within the coastal nation have been dreading the day France invades. This day has done, with the French government officially declaring war on Brittainy. Despite preparations for such an event made by the Brittain military, the small nation stands little chance against the might of the French army. Instead, the Brittain government has called for international aid, and for decisive action against France for this act of aggression. But until such a response comes, Brittany will have to hold out for as long as possible."  
+  PBNews.83.a:0 "Hold The Line!"
 
   PBNews.84.t:0 "BRITTANY FALLS"
   PBNews.84.d:0 ""  
@@ -329,8 +329,8 @@
   PBNews.85.a:0 "Another nation gone dark"
 
   PBNews.86.t:0 "FRANCE MARCHES TO WALLONIA"
-  PBNews.86.d:0 ""  
-  PBNews.86.a:0 "France marches closer to Germany"
+  PBNews.86.d:0 "With the French government’s noticeable rise in Revanchism, few were surprised when they called for the Wallonia’s surrender. The small landlocked nation immediately requested support from the United Kingdoms of Germany, but no such support was provided, leaving them to fend for themselves. Despite the overwhelming size of the French military when compared to Wallonia, they have refused to capitulate. The Wallonian government has called for its people to resist the ‘force of French Revanchism’ in any way they can hoping to cost the French as many soldiers as possible. Despite this heroic resistance, few hold out hope for a Wallonian victory."  
+  PBNews.86.a:0 "Like Fighting The Ocean With A Bucket"
 
   PBNews.87.t:0 "FRANCE DECLARES WAR ON GERMANY"
   PBNews.87.d:0 "War has broken out in Europe, as the French military has launched a full-scale invasion of Germany. The government officially declared war just minutes after the first military engagement, claiming that the United Kingdoms of Germany were poised to invade and that the invasion was little more than a preemptive strike. The German government has denounced these claims, vowing to fight to the last man against the French. Some foreign analysts believe that this conflict will soon spiral across the whole continent, but only time will tell if this is the case."  
