--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -1,6 +1,13 @@
 ﻿l_english:
 
   ##########################
+  #POWER STRUGGLE
+  ##########################
+  PB_RUS_Power_Struggle_Mechanic:0 "The Russian Power Struggle"
+  PB_RUS_Power_Struggle_Mechanic_desc:0 "\n\n\n\n\n\nWith the Tsar suffering from a sever case of Epidemic Typhus the Russian nation has prepared itself for what can only be described as a struggle of the ages. The Black Hundreds roam the streets with little jurisdiccion, the army utilizes bully tactics to increase its funding, and the people cry for reform. 1933 will be known as the "Year of Strife" and all shall hear its name.\n\nkirill's Political Influence:  §Y[?RUS_kirill_power|%0]§!\n\nAlexandra's Political Influence:  §Y[?RUS_alexandra_power |%0]§!\n\nAlexei's Political Influence:  §Y[?RUS_alexei_power  |%0]§!  "
+  PB_RUS_Power_Struggle_Mechanic_tt:0 "New §YDecisions§! Will Be Unlocked"
+  
+  ##########################
   #Political Dissonance/Ethnic Cohesion
   ##########################
   Political_Dissonance_tt:0 "§OPolitical Dissonance§! is currently at [?RUS_Political_Dissonance|%0]"
@@ -254,6 +261,11 @@
   RUS.40.a:0 ""
   RUS.40.b:0 ""
   RUS.40.c:0 ""
+  RUS.41.t:0 "Death, Taxes, And Royalty"
+  RUS.41.d:0 ""
+  RUS.41.a:0 ""
+  RUS.41.b:0 ""
+  RUS.41.c:0 ""
   #KIRILL EVENTS  
   RUS_kirill.1.t:0 "The Cousin on the Throne"
   RUS_kirill.1.d:0 ""
@@ -342,18 +354,18 @@
   RUS_kirill.24.d:0 ""
   RUS_kirill.24.a:0 "Long live the Greater Empire"
   # ALEXEI EVENTS #
- RUS_alexei.1.t:0 "Alexei Ascends to Power"
- RUS_alexei.1.d:0 "placeholder"
- RUS_alexei.1.a:0 "placeholder"
- RUS_alexei.2.t:0 "Utter Collapse of the Party!"
- RUS_alexei.2.d:0 "placeholder"
- RUS_alexei.2.a:0 "placeholder"
- RUS_alexei.3.t:0 "The Last Man Standing"
- RUS_alexei.3.d:0 "placeholder"
- RUS_alexei.3.a:0 "placeholder"
- RUS_alexei.4.t:0 "The Greatest Undertaking"
- RUS_alexei.4.d:0 "placeholder"
- RUS_alexei.4.a:0 "placeholder"
+  RUS_alexei.1.t:0 "Alexei Ascends to Power"
+  RUS_alexei.1.d:0 "placeholder"
+  RUS_alexei.1.a:0 "placeholder"
+  RUS_alexei.2.t:0 "Utter Collapse of the Party!"
+  RUS_alexei.2.d:0 "placeholder"
+  RUS_alexei.2.a:0 "placeholder"
+  RUS_alexei.3.t:0 "The Last Man Standing"
+  RUS_alexei.3.d:0 "placeholder"
+  RUS_alexei.3.a:0 "placeholder"
+  RUS_alexei.4.t:0 "The Greatest Undertaking"
+  RUS_alexei.4.d:0 "placeholder"
+  RUS_alexei.4.a:0 "placeholder"
   ##########################
   # GUI DESCRIPTIONS
   ##########################
@@ -362,246 +374,18 @@
   ##########################
   # FOCUS
   ##########################  
-  PB_RUS_the_tsar_looks_to_his_lands:0 "The Tsar Looks to his Lands"
-  PB_RUS_the_tsar_looks_to_his_lands_desc:0 ""
-  PB_RUS_the_russian_heartland:0 "The Russian Heartland"
-  PB_RUS_the_russian_heartland_desc:0 ""
-  PB_RUS_centralizing_our_advanced_industry:0 "Centralizing our Advanced Industry"
-  PB_RUS_centralizing_our_advanced_industry_desc:0 ""
-  PB_RUS_bigger_is_better:0 "BIGGER is BETTER"
-  PB_RUS_bigger_is_better_desc:0 ""
-  PB_RUS_making_use_of_the_land:0 "Making use of the Land"
-  PB_RUS_making_use_of_the_land_desc:0 ""
-  PB_RUS_the_blood_of_war:0 "The Blood of War"
-  PB_RUS_the_blood_of_war_desc:0 ""
-  PB_RUS_maximizing_production:0 "Maximizing Production"
-  PB_RUS_maximizing_production_desc:0 ""
-  PB_RUS_the_people_must_work:0 "The People Must Work"
-  PB_RUS_the_people_must_work_desc:0 ""
-  PB_RUS_the_backbone_of_a_nation:0 "The Backbone of an Empire"
-  PB_RUS_the_backbone_of_a_nation_desc:0 ""
-  PB_RUS_our_mighty_industry:0 "Our Mighty Industry"
-  PB_RUS_our_mighty_industry_desc:0 ""
-  PB_RUS_protecting_our_production:0 "Protecting our Production"
-  PB_RUS_protecting_our_production_desc:0 ""
-  PB_RUS_work_smart:0 "Work Smart"
-  PB_RUS_work_smart_desc:0 ""
-  PB_RUS_defending_our_industry:0 "Defending our Industry"
-  PB_RUS_defending_our_industry_desc:0 ""
-  PB_RUS_spreading_our_factories_out:0 "Spreading Our Factories Far and Wide"
-  PB_RUS_spreading_our_factories_out_desc:0 ""
-  PB_RUS_build_smart:0 "Build Smart"
-  PB_RUS_build_smart_desc:0 ""
-  PB_RUS_the_workers_must_live:0 "Our Workers Must Survive!"
-  PB_RUS_the_workers_must_live_desc:0 ""
-  PB_RUS_a_steel_house_of_cards:0 "A Steel House of Cards"
-  PB_RUS_a_steel_house_of_cards_desc:0 ""
-  PB_RUS_our_impervious_industry:0 "Our Impervious Industry"
-  PB_RUS_our_impervious_industry_desc:0 ""
-  PB_RUS_bringing_the_provinces_in_line:0 "Bringing the Provinces in Line"
-  PB_RUS_bringing_the_provinces_in_line_desc:0 ""
-  PB_RUS_making_use_of_the_white_guard:0 "Making use of the White Guard"
-  PB_RUS_making_use_of_the_white_guard_desc:0 ""
-  PB_RUS_guarding_vital_resources:0 "Guarding our Vital Resources"
-  PB_RUS_guarding_vital_resources_desc:0 ""
-  PB_RUS_black_hundreds_work_commissars:0 "Black Hundreds Work Commissars"
-  PB_RUS_black_hundreds_work_commissars_desc:0 ""
-  PB_RUS_a_lighter_touch_is_needed:0 "A Lighter Touch is Needed"
-  PB_RUS_a_lighter_touch_is_needed_desc:0 ""
-  PB_RUS_nobles_are_the_key:0 "Nobles are the Key"
-  PB_RUS_nobles_are_the_key_desc:0 ""
-  PB_RUS_the_tsarina_input:0 "The Tsarina's Input"
-  PB_RUS_the_tsarina_input_desc:0 ""
-  PB_RUS_our_economy_secured:0 "Russia's Fortune Secured"
-  PB_RUS_our_economy_secured_desc:0 ""
-  PB_RUS_concerning_reports_from_the_autonomies:0 "Concerning Reports From the Autonomies"
-  PB_RUS_concerning_reports_from_the_autonomies_desc:0 ""
-  PB_RUS_the_anger_of_the_baltic_nobles:0 "The Anger of the Baltic German Nobles"
-  PB_RUS_the_anger_of_the_baltic_nobles_desc:0 ""
-  PB_RUS_reinforce_denikin_men:0 "Reinforce Denikin's Men"
-  PB_RUS_reinforce_denikin_men_desc:0 ""
-  PB_RUS_sending_white_guard_detatchments:0 "Sending Over White Guard Detatchments"
-  PB_RUS_sending_white_guard_detatchments_desc:0 ""
-  PB_RUS_concessions_to_the_saxons:0 "Concessions to the Saxons"
-  PB_RUS_concessions_to_the_saxons_desc:0 ""
-  PB_RUS_recruiting_baltic_freikorps:0 "Recruiting From the Baltic Freikorps"
-  PB_RUS_recruiting_baltic_freikorps_desc:0 ""
-  PB_RUS_the_growing_heresy_in_the_caususes:0 "The Growing Heresy in the Caucuses"
-  PB_RUS_the_growing_heresy_in_the_caususes_desc:0 ""
-  PB_RUS_crackdown_on_this_apostasy:0 "Crackdown on this Apostasy!"
-  PB_RUS_crackdown_on_this_apostasy_desc:0 ""
-  PB_RUS_heresy_shall_have_no_place:0 "Heresy Shall Have no Place"
-  PB_RUS_heresy_shall_have_no_place_desc:0 ""
-  PB_RUS_it_merely_a_fade:0 "It is Merely a Fad"
-  PB_RUS_it_merely_a_fade_desc:0 ""
-  PB_RUS_let_them_grow:0 "Let Them Grow"
-  PB_RUS_let_them_grow_desc:0 ""
-  PB_RUS_the_stalemate_in_finland:0 "The Stalemate in Finland"
-  PB_RUS_the_stalemate_in_finland_desc:0 ""
-  PB_RUS_talk_with_the_insurgents:0 "Talk with the Rebels"
-  PB_RUS_talk_with_the_insurgents_desc:0 ""
-  PB_RUS_support_the_garrison:0 "Support the Garrison"
-  PB_RUS_support_the_garrison_desc:0 ""
-  PB_RUS_peace_in_finland:0 "Peace in Finland"
-  PB_RUS_peace_in_finland_desc:0 ""
-  PB_RUS_begin_the_assault:0 "Begin the Assault!"
-  PB_RUS_begin_the_assault_desc:0 ""
-  PB_RUS_the_status_of_our_outward_vassals:0 "The Status of Russia's Outer Vassals"
-  PB_RUS_the_status_of_our_outward_vassals_desc:0 ""
-  PB_RUS_the_pilsudski_insurgency:0 "The Pilsudski Insurgency"
-  PB_RUS_the_pilsudski_insurgency_desc:0 ""
-  PB_RUS_speak_with_dmowski:0 "Speak with Dmowski"
-  PB_RUS_speak_with_dmowski_desc:0 ""
-  PB_RUS_levy_native_poles:0 "Levy Native Polish Divisions"
-  PB_RUS_levy_native_poles_desc:0 ""
-  PB_RUS_another_job_for_the_white_guard:0 "Another Job for the White Guard"
-  PB_RUS_another_job_for_the_white_guard_desc:0 ""
-  PB_RUS_any_means_necessary:0 "Submission by Any Means Necessary"
-  PB_RUS_any_means_necessary_desc:0 ""
-  PB_RUS_brothers_in_arms_brothers_in_blood:0 "Brothers in Arms, Brothers in Blood"
-  PB_RUS_brothers_in_arms_brothers_in_blood_desc:0 ""
-  PB_RUS_the_turkish_backwater:0 "The Turkish Backwater"
-  PB_RUS_the_turkish_backwater_desc:0 ""
-  PB_RUS_mass_in_constantinople:0 "A Royal Mass in Constantinople"
-  PB_RUS_mass_in_constantinople_desc:0 ""
-  PB_RUS_rewarding_the_kurds:0 "Rewarding the Kurds"
-  PB_RUS_rewarding_the_kurds_desc:0 ""
-  PB_RUS_reaping_the_spoils_of_crimea:0 "Reaping the Spoils of Crimea"
-  PB_RUS_reaping_the_spoils_of_crimea_desc:0 ""
-  PB_RUS_the_bickering_of_the_prussians:0 "The Bickering of the Prussians"
-  PB_RUS_the_bickering_of_the_prussians_desc:0 ""
-  PB_RUS_support_all_their_endevors:0 "Support all of Their Endevors"
-  PB_RUS_support_all_their_endevors_desc:0 ""
-  PB_RUS_send_a_military_attache_to_prussia:0 "Send a Military Attache to Prussia"
-  PB_RUS_send_a_military_attache_to_prussia_desc:0 ""
-  PB_RUS_moderate_support_for_prussia:0 "Moderate Support for Prussia"
-  PB_RUS_moderate_support_for_prussia_desc:0 ""
-  PB_RUS_Send_over_outdated_weaponry:0 "Send Them Outdated Weaponry"
-  PB_RUS_Send_over_outdated_weaponry_desc:0 ""
-  PB_RUS_when_prussia_calls_we_will_answer:0 "When Prussia Calls, Russia will Answer"
-  PB_RUS_when_prussia_calls_we_will_answer_desc:0 ""
-  PB_RUS_autonomy_concerns_resolved:0 "Autonomy Concerns Pacified"
-  PB_RUS_autonomy_concerns_resolved_desc:0 ""
-  PB_RUS_rewarding_our_governors:0 "Rewarding the Governors"
-  PB_RUS_rewarding_our_governors_desc:0 ""
-  PB_RUS_third_rome_is_united:0 "Russia is United Behind the Tsar"
-  PB_RUS_third_rome_is_united_desc:0 ""
-  PB_RUS_the_tsar_looks_to_his_soldiers:0 "The Tsar Looks to His Soldiers"
-  PB_RUS_the_tsar_looks_to_his_soldiers_desc:0 ""
-  PB_RUS_in_whom_does_the_future_lie:0 "In Whom Does the Future of War Lie?"
-  PB_RUS_in_whom_does_the_future_lie_desc:0 ""
-  PB_RUS_our_faith_in_tesla:0 "Keep our Faith in Tesla"
-  PB_RUS_our_faith_in_tesla_desc:0 ""
-  PB_RUS_weapons_of_the_angels:0 "The Weapons of the Angels"
-  PB_RUS_weapons_of_the_angels_desc:0 ""
-  PB_RUS_michael_spear:0 "St. George's Holy Spear"
-  PB_RUS_michael_spear_desc:0 ""
-  PB_RUS_power_armoured_titans:0 "Power Armoured Titans"
-  PB_RUS_power_armoured_titans_desc:0 ""
-  PB_RUS_the_metal_legion:0 "The Metal Legion"
-  PB_RUS_the_metal_legion_desc:0 ""
-  PB_RUS_send_them_the_wrath_of_heaven:0 "Send Them the Wrath of Heaven!"
-  PB_RUS_send_them_the_wrath_of_heaven_desc:0 ""
-  PB_RUS_a_future_in_both:0 "A Future in Both?"
-  PB_RUS_a_future_in_both_desc:0 ""
-  PB_RUS_giving_aid_to_tesla:0 "Giving Aid to Tesla"
-  PB_RUS_giving_aid_to_tesla_desc:0 ""
-  PB_RUS_advancing_to_the_future:0 "Advancing to the Future"
-  PB_RUS_advancing_to_the_future_desc:0 ""
-  PB_RUS_giving_support_to_lysenko:0 "Giving Support to Lysenko"
-  PB_RUS_giving_support_to_lysenko_desc:0 ""
-  PB_RUS_making_use_of_our_world:0 "Making use of the World"
-  PB_RUS_making_use_of_our_world_desc:0 ""
-  PB_RUS_weapons_of_energy_and_blood:0 "Weapons of Energy and Blood"
-  PB_RUS_weapons_of_energy_and_blood_desc:0 ""
-  PB_RUS_our_future_in_lysenko:0 "A New Path in Lysenko"
-  PB_RUS_our_future_in_lysenko_desc:0 ""
-  PB_RUS_initiating_the_program:0 "Initiating the Program"
-  PB_RUS_initiating_the_program_desc:0 ""
-  PB_RUS_the_fruits_of_our_labour:0 "The Fruits of Russia's Labour"
-  PB_RUS_the_fruits_of_our_labour_desc:0 ""
-  PB_RUS_the_true_dogs_of_war:0 "The True Dogs of War"
-  PB_RUS_the_true_dogs_of_war_desc:0 ""
-  PB_RUS_to_tame_the_bear:0 "To Tame the Bear"
-  PB_RUS_to_tame_the_bear_desc:0 ""
-  PB_RUS_nature_is_our_weapon:0 "Nature is Russia's Weapon"
-  PB_RUS_nature_is_our_weapon_desc:0 ""
-  PB_RUS_be_our_sword_and_shield:0 "Be our Sword and Shield"
-  PB_RUS_be_our_sword_and_shield_desc:0 ""
-  PB_RUS_the_tsar_looks_to_the_world:0 "The Tsar Looks to the World"
-  PB_RUS_the_tsar_looks_to_the_world_desc:0 ""
-  PB_RUS_expanding_the_sphere:0 "Expanding Russia's Sphere"
-  PB_RUS_expanding_the_sphere_desc:0 ""
-  PB_RUS_where_does_our_destiny_lie:0 "But Where Does our Destiny Lie?"
-  PB_RUS_where_does_our_destiny_lie_desc:0 ""
-  PB_RUS_with_untapped_lands:0 "With Untapped Lands!"
-  PB_RUS_with_untapped_lands_desc:0 ""
-  PB_RUS_shaking_gloved_hands_with_savages:0 "Shaking Gloved Hands with Savages"
-  PB_RUS_shaking_gloved_hands_with_savages_desc:0 ""
-  PB_RUS_an_offer_to_abyssinia:0 "An Offer to Abyssinia"
-  PB_RUS_an_offer_to_abyssinia_desc:0 ""
-  PB_RUS_with_the_slavs:0 "With our Brethren!"
-  PB_RUS_with_the_slavs_desc:0 ""
-  PB_RUS_sending_arms_to_our_brothers:0 "Sending Arms to our Brothers"
-  PB_RUS_sending_arms_to_our_brothers_desc:0 ""
-  PB_RUS_slavs_under_threat:0 "Slavs Under Threat"
-  PB_RUS_slavs_under_threat_desc:0 ""
-  PB_RUS_with_all_of_europe:0 "With all of Europe!"
-  PB_RUS_with_all_of_europe_desc:0 ""
-  PB_RUS_scandinavian_overtures:0 "Swedish Overtures"
-  PB_RUS_scandinavian_overtures_desc:0 ""
-  PB_RUS_finding_royals_in_the_lowlands:0 "Finding Royal Allies in the Lowlands"
-  PB_RUS_finding_royals_in_the_lowlands_desc:0 ""
-  PB_RUS_reaching_out_to_the_french:0 "Reaching out to the French"
-  PB_RUS_reaching_out_to_the_french_desc:0 ""
-  PB_RUS_what_we_expect:0 "What is Expected of Russia?"
-  PB_RUS_what_we_expect_desc:0 ""
-  PB_RUS_what_we_give:0 "What Shall Russia Give?"
-  PB_RUS_what_we_give_desc:0 ""
-  PB_RUS_russia_shall_join_the_pact:0 "Russia Shall Join the Pact!"
-  PB_RUS_russia_shall_join_the_pact_desc:0 ""
-  PB_RUS_sending_a_warning:0 "Sending a Warning to Former Allies"
-  PB_RUS_sending_a_warning_desc:0 ""
-  PB_RUS_oriental_ventures:0 "Oriental Ventures"
-  PB_RUS_oriental_ventures_desc:0 ""
-  PB_RUS_the_fist_of_rus:0 "The Might of Russia Always Prevails!"
-  PB_RUS_the_fist_of_rus_desc:0 ""
-  PB_RUS_our_right_to_the_east:0 "Russia's Right to the East"
-  PB_RUS_our_right_to_the_east_desc:0 ""
-  PB_RUS_the_blade_of_the_pen:0 "The Blade of the Pen"
-  PB_RUS_the_blade_of_the_pen_desc:0 ""
-  PB_RUS_finding_suitable_tools:0 "Finding Suitable Pawns"
-  PB_RUS_finding_suitable_tools_desc:0 ""
-  PB_RUS_onwards_to_manchuria:0 "Onwards to Manchuria!"
-  PB_RUS_onwards_to_manchuria_desc:0 ""
-  PB_RUS_the_spoils_of_imperialism:0 "The Spoils of Imperialism"
-  PB_RUS_the_spoils_of_imperialism_desc:0 ""
-  PB_RUS_the_world_will_be_ours:0 "The World Shall be Russia's"
-  PB_RUS_the_world_will_be_ours_desc:0 ""
-  PB_RUS_an_empire_of_faith:0 "The Tsar Looks to the Church"
-  PB_RUS_an_empire_of_faith_desc:0 ""
-  PB_RUS_bring_the_faith_to_the_poles:0 "Bring the Faith to the other Christians"
-  PB_RUS_bring_the_faith_to_the_poles_desc:0 ""
-  PB_RUS_we_are_brothers_under_the_cross:0 "We are Brothers Under the Cross"
-  PB_RUS_we_are_brothers_under_the_cross_desc:0 ""
-  PB_RUS_convert_the_heathens:0 "Convert the Heathens of the Empire"
-  PB_RUS_convert_the_heathens_desc:0 ""
-  PB_RUS_cousins_in_faith:0 "Let Them go in Peace"
-  PB_RUS_cousins_in_faith_desc:0 ""
-  PB_RUS_a_russian_church:0 "A Russian Church"
-  PB_RUS_a_russian_church_desc:0 ""
-  PB_RUS_a_world_church:0 "A Church of the World"
-  PB_RUS_a_world_church_desc:0 ""
-  PB_RUS_the_death_of_the_patriarch:0 "The Death of the Patriarch"
-  PB_RUS_the_death_of_the_patriarch_desc:0 ""
-  PB_RUS_the_stranniki_candidate:0 "The Stranniki Candidate"
-  PB_RUS_the_stranniki_candidate_desc:0 ""
-  PB_RUS_the_black_hundreds_candidate:0 "The Black Hundreds Candidate"
-  PB_RUS_the_black_hundreds_candidate_desc:0 ""
-  PB_RUS_the_noble_candidate:0 "The Noble Candidate"
-  PB_RUS_the_noble_candidate_desc:0 ""
-  PB_RUS_christ_has_our_backs:0 "Christ Protects Holy Russia"
-  PB_RUS_christ_has_our_backs_desc:0 ""
+  PB_RUS_Death_Taxes_And_Royalty:0 "Death, Taxes, And Royalty"
+  PB_RUS_Appeal_To_The_Peasants:0 "Appeal To The Peasants"
+  PB_RUS_Exiles_For_A_Far_Away_Land:0 "Exiles For A Far Away Land"
+  PB_RUS_Desk_Inspections:0 "Desk Inspections"
+  PB_RUS_Operation_Skazki:0 "Operation: §RSkazki§!"
+  PB_RUS_Point_The_Finger:0 "Point The Finger"
+  PB_RUS_Ban_Unions_Entirely:0 "Ban Unions Entirely"
+  PB_RUS_The_All_Seeing_Eye:0 "The All Seeing Eye"
+  PB_RUS_Know_Your_Enemy:0 "Know Your Enemy"
+  PB_RUS_The_Veteran_Issue:0 "The Veteran Issue"
+  PB_RUS_Russias_Holiest_Day:0 "Russia's Holiest Day"
+
   #KIRILL FOCUSES
   PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
   PB_RUS_kirill_exiling_alexei:0 "Exiling Alexei"
@@ -1212,6 +996,9 @@
   ########################## 
   # TOOLTIPS
   ##########################
+
+  #INTRO TOOLTIPS#
+  PB_RUS_Death_Taxes_And_Royalty_tt:0 "\nThe future of Russia will be determined in the following months"
 
   # ALEXEI TOOLTIPS #
   PB_RUS_alexei_tooltip_1:0 "With the state secured, we can finally move to establish our §G'New World Order'§!"
