--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -5,8 +5,13 @@
   ##########################
   PB_RUS_Power_Struggle_Mechanic:0 "The Russian Power Struggle"
   PB_RUS_Power_Struggle_Mechanic_desc:0 "\n\n\n\n\n\nWith the Tsar suffering from a sever case of Epidemic Typhus the Russian nation has prepared itself for what can only be described as a struggle of the ages. The Black Hundreds roam the streets with little jurisdiccion, the army utilizes bully tactics to increase its funding, and the people cry for reform. 1933 will be known as the "Year of Strife" and all shall hear its name.\n\nkirill's Political Influence:  §Y[?RUS_kirill_power|%0]§!\n\nAlexandra's Political Influence:  §Y[?RUS_alexandra_power |%0]§!\n\nAlexei's Political Influence:  §Y[?RUS_alexei_power  |%0]§!  "
-  PB_RUS_Power_Struggle_Mechanic_tt:0 "New §YDecisions§! Will Be Unlocked"
-  
+  PB_RUS_Death_Taxes_And_Royalty_tt:0 "\nThe future of Russia will be determined in the following months"
+  RUS_TSAR_VERY_SICK:0 "The Tsar's Days Are Numbered"
+  RUS_Succession_Struggle_Over:0 "The Succession Struggle Is Over"
+  RUS_Appeal_To_The_Peasants:0 "Appeal To The Peasants"
+  RUS_Desk_Inspections:0 "Desk Inspections"
+  RUS_Exiles_For_A_Far_Away_Land:0 "Exiles For A Far Away Land"
+
   ##########################
   #Political Dissonance/Ethnic Cohesion
   ##########################
@@ -73,6 +78,7 @@
   ##########################
   # IDEAS
   ##########################
+  PB_RUS_Military_Reform:0 "Military Reforms"
   PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath of the Nationalist Revolts"
   PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 ""
   PB_RUS_the_purification_program:0 "The Purification Program"
@@ -997,8 +1003,7 @@
   # TOOLTIPS
   ##########################
 
-  #INTRO TOOLTIPS#
-  PB_RUS_Death_Taxes_And_Royalty_tt:0 "\nThe future of Russia will be determined in the following months"
+  
 
   # ALEXEI TOOLTIPS #
   PB_RUS_alexei_tooltip_1:0 "With the state secured, we can finally move to establish our §G'New World Order'§!"
