--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -359,6 +359,9 @@
   RUS_kirill.24.t:0 "The Tsar's Orders"
   RUS_kirill.24.d:0 ""
   RUS_kirill.24.a:0 "Long live the Greater Empire"
+  RUS_kirill.25.t:0 "Expanding the Net"
+  RUS_kirill.25.d:0 ""
+  RUS_kirill.25.a:0 "lamo"
   # ALEXEI EVENTS #
   RUS_alexei.1.t:0 "Alexei Ascends to Power"
   RUS_alexei.1.d:0 "placeholder"
