--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -398,15 +398,23 @@
   PB_RUS_Appeal_To_The_Peasants:0 "Appeal To The Peasants"
   PB_RUS_Appeal_To_The_Peasants_desc:0 "The vast majority of the Russian population are still peasant farmers. Appeasing these individuals will go a long way in gathering support from the lower classes whilst also hindering the legitimacy of other political players."
   PB_RUS_Exiles_For_A_Far_Away_Land:0 "Exiles For A Far Away Land"
-  PB_RUS_Exiles_For_A_Far_Away_Land_desc:0 "Exiles For A Far Away Land"
+  PB_RUS_Exiles_For_A_Far_Away_Land_desc:0 "The colony of Novorossiya is one home to degenerates, political abominations, and inbred scum; the perfect hell for those that dare question the Tsar's rule. Utilizing the monthly settler and convict transport ships as 'dumping grounds' for political opponents will prove effective at silencing opposition.  "
   PB_RUS_Desk_Inspections:0 "Desk Inspections"
+  PB_RUS_Desk_Inspections_desc:0 "Planting fake evidence on suspected political opponents may be the best option available to quickly and effectively remove rivals. Unfortunately we will only be able to fabricate such lies once as abusing the process may reveal ourselves as well as our intentions. "
   PB_RUS_Operation_Skazki:0 "Operation: §RSkazki§!"
+  PB_RUS_Operation_Skazki_desc:0 "Operation Skazki (Operation Fairytale) is the Tsar's final card play to ensure that Russia doesn't descend into chaos upon his death. It calls for the combined use of the Black Hundreds and Military to begin culling all citizens of Russia, regardless of status and wealth. Anyone that can be considered an internal threat, no matter how small, will be dealt with accordingly. Mother Russia may protest but she will learn to love the Tsar, afterall she doesn't have a choice."
   PB_RUS_Point_The_Finger:0 "Point The Finger"
+  PB_RUS_Point_The_Finger_desc:0 "The Russian plight is one solely constructed by the Jewish people. While they may find refuge in Germany and Britain all they shall find here is torment, abuse, and death much like what they had once inflicted on the Russian people. We will have no mercy and no second thoughts."
   PB_RUS_Ban_Unions_Entirely:0 "Ban Unions Entirely"
+  PB_RUS_Ban_Unions_Entirely_desc:0 "While nationalist unions are still in operation many have found increased support from Jacobin aligned individuals; at a concerning rate one may add. To prevent these established unions from becoming leftist hives we must rid them of their existance. We trusted them and they abused that trust, now they shall regret it."
   PB_RUS_The_All_Seeing_Eye:0 "The All Seeing Eye"
+  PB_RUS_The_All_Seeing_Eye_desc:0 "The people are becoming increasingly agitated by the Tsar's rather authoritarian policies. Whispers of rebellion run wild in the streets of Moscow and citizens have taken openly hostile stances towards the Russian regime; this must change. Russia is no home for democracy and liberty and the people must know that. It is therefore apparent that we must rid ourselves of these foreign concepts, freedom afterall is a word invented by the British.  "
   PB_RUS_Know_Your_Enemy:0 "Know Your Enemy"
+  PB_RUS_Know_Your_Enemy_desc:0 "He who dare questions the Tsar is not only an enemy, but a parasite, one that must be removed. But such parasites live in hosts, habitable alien bodies which they call home. It is not enough to simply kill the parasite, we must poison any possible home to drive it to extinction. Unfortuantely some individuals require a helping hand or two; luckily we have more than enough to go around."
   PB_RUS_The_Veteran_Issue:0 "The Veteran Issue"
+  PB_RUS_The_Veteran_Issue_desc:0 "Large amounts of unemployed veterans roam the streets of Russia. As sad as it is they have proven a painful existance, many of which have turned to a life of crime or found solace in alcohlol. Adding to that is a rather outdated command structure; generals and field marshals bathe in old war ideas and strategies. If Russia is to survive the century she must adapt and evolve."
   PB_RUS_Russias_Holiest_Day:0 "Russia's Holiest Day"
+  PB_RUS_Russias_Holiest_Day_desc:0 "Russia for the briefest of seconds laid quitely. Its factories remained shut after years of operation, its people stayed in doors to hide from the Black Hundreds, and the political officials called in sick to avoid any bureaucratic responsibility for the hell that was about to unfold. And for the Tsar, well he laid frozen still, barely able to move a finger. By midnight the Tsar of holy Russia was declared dead and Moscow lit up in flames as a result; years of political abuse gave way to a melting pot of ideologies and the Year of Strife officially concluded."
 
   #KIRILL FOCUSES
   PB_RUS_kirill_prince_traditionon_throne:0 "The Prince of Tradition on the Throne"
