Another Russia Push

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -3,19 +3,36 @@
   ##########################
   #POWER STRUGGLE
   ##########################
-  PB_RUS_Power_Struggle_Mechanic:0 "The Russian Power Struggle"
-  PB_RUS_Power_Struggle_Mechanic_desc:0 "\n\n\n\n\n\nWith the Tsar suffering from a sever case of Epidemic Typhus the Russian nation has prepared itself for what can only be described as a struggle of the ages. The Black Hundreds roam the streets with little Jurisdiction, the army utilizes bully tactics to increase its funding, and the people cry for reform. 1933 will be known as the "Year of Strife" and all shall hear its name.\n\nkirill's Political Influence:  §Y[?RUS_kirill_power]%§!\n\nAlexandra's Political Influence:  §Y[?RUS_alexandra_power]%§!\n\nAlexei's Political Influence:  §Y[?RUS_alexei_power]%§!"
   PB_RUS_Death_Taxes_And_Royalty_tt:0 "\nThe future of Russia will be determined in the following months"
   RUS_TSAR_VERY_SICK:0 "The Tsar's Days Are Numbered"
-  RUS_Succession_Struggle_Over:0 "The Succession Struggle Is Over"
-  RUS_Appeal_To_The_Peasants:0 "Appeal To The Peasants"
-  RUS_Desk_Inspections:0 "Desk Inspections"
-  RUS_Exiles_For_A_Far_Away_Land:0 "Exiles For A Far Away Land"
+  Succession_Struggle_Over:0 "The Succession Struggle Is Over"
   PB_RUS_Know_Your_Enemy_tt:0 "Six §YBlack Hundred Militias§! Will Be Mobolized"
   PB_RUS_Russias_Holiest_Day_tt:0 "Depending On Who Has The Greatest Amount Of Political Influence A §YNew Focus Tree§! Will Load"
   PB_RUS_Appeal_To_The_Peasants_tt:0 "\nThe '§YAppeal To The Peasants§!' Mission Has The Greatest Chance Of Failure But Grants The Largest Increase Of §YPolitical Influence§!; It lasts 20 Days Before Resetting"
   PB_RUS_Exiles_For_A_Far_Away_Land_tt:0 "\nThe '§YExiles For A Far Away Land§!' Mission Has The Smallest Chance Of Failure But Grants The Smallest Increase Of §YPolitical Influence§!; It lasts 20 Days Before Resetting"
   PB_RUS_Desk_Inspections_tt:0 "\nThe '§YDesk Inspections§!' Mission Only Fires Once But Guarantees +20% §YPolitical Influence§!"
+  RUS_Alexei_Picked_tt:0 "You Will Deal With The Power Struggle From Alexei's Perspective"
+  RUS_Alexandra_Picked_tt:0 "You Will Deal With The Power Struggle From Alexandra's Perspective"
+  RUS_Kirill_Picked_tt:0 "You Will Deal With The Power Struggle From Kirill's Perspective"
+  RUS_Alexandra_Picked:0 "Alexandra Has Been Picked"
+  RUS_Alexei_Picked:0 "Alexei Has Been Picked"
+  RUS_Kirill_Picked:0 "Kirill Has Been Picked"
+
+  PB_RUS_Power_Struggle_Mechanic:0 "The Russian Power Struggle"
+  PB_RUS_Power_Struggle_Mechanic_desc:0 "\n\n\n\n\n\nWith the Tsar suffering from a sever case of Epidemic Typhus the Russian nation has prepared itself for what can only be described as a struggle of the ages. The Black Hundreds roam the streets with little Jurisdiction, the army utilizes bully tactics to increase its funding, and the people cry for reform. 1933 will be known as the "Year of Strife" and all shall hear its name.\n\nkirill's Political Influence:  §Y[?RUS_kirill_power]%§!\n\nAlexandra's Political Influence:  §Y[?RUS_alexandra_power]%§!\n\nAlexei's Political Influence:  §Y[?RUS_alexei_power]%§!"
+  RUS_Appeal_To_The_Peasants:0 "Appeal To The Peasants"
+  RUS_Desk_Inspections:0 "Desk Inspections"
+  RUS_Exiles_For_A_Far_Away_Land:0 "Exiles For A Far Away Land"
+  RUS_alexei_power_plus_6:0 "Alexei's Political Influence Is Increased By §G+6%§!"
+  RUS_alexandra_power_plus_6:0 "Alexandra's Political Influence Is Increased By §G+6%§!"
+  RUS_kirill_power_plus_6:0 "Kirill's Political Influence Is Increased By §G+6%§!"
+  RUS_alexei_power_plus_20:0 "Alexei's Political Influence Is Increased By §G+20%§!"
+  RUS_alexandra_power_plus_20:0 "Alexandra's Political Influence Is Increased By §G+20%§!"
+  RUS_kirill_power_plus_20:0 "Kirill's Political Influence Is Increased By §G+20%§!"
+  RUS_alexei_power_plus_2:0 "Alexei's Political Influence Is Increased By §G+2%§!"
+  RUS_alexandra_power_plus_2:0 "Alexandra's Political Influence Is Increased By §G+2%§!"
+  RUS_kirill_power_plus_2:0 "Kirill's Political Influence Is Increased By §G+2%§!"
+  RUS_Kirill_Picked_Desk_Inspections_Blocked:0 "Due To Kirill's Extensive bureaucratic Connections He Cannot Afford Undertaking Such A Daring Political Stunt"
 
   ##########################
   #Political Dissonance/Ethnic Cohesion
@@ -85,17 +102,14 @@
   ##########################
   PB_RUS_Military_Reform:0 "Military Reforms"
   PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath of the Nationalist Revolts"
-  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 ""
-  PB_RUS_the_purification_program:0 "The Purification Program"
-  PB_RUS_the_purification_program_desc:0 ""
-  PB_RUS_the_russian_miracle:0 "The Russian Miracle"
-  PB_RUS_the_russian_miracle_desc:0 ""
+  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 "The Nationalist Revolts of the 1920s have forever damned Russia; any dreams of a united slavic peoples has gone down the drain, for now. While the Prussians, Poles, Finnish, Balts and Caucasians all enjoy nominal "independence" there is a clear motive by the Russian state to fully reintegrate theses divided territories.\n\nWhile the Germans may have demanded that autonomy be granted to these newly birthed lands such demands were enforced in a time where Russia was weak, that is no longer the case. While Frankfurt and London may cry independence there is little they can truly do now. "
   PB_RUS_the_plotting_scoundrels:0 "The Plotting Scoundrels"
   PB_RUS_the_plotting_scoundrels_desc:0 ""
   PB_RUS_revenge_for_the_fallen:0 "Revenge for the Fallen"
   PB_RUS_revenge_for_the_fallen_desc:0 ""
   RUS_church_modifier:0 "The State of Church Policy"
   RUS_church_modifier_desc:0 ""
+
   ## Ideas For The Russian Collapse ##
 
   PB_RUS_Volga_Germany:0 "Volga Germany"
@@ -274,9 +288,9 @@
   RUS.40.c:0 ""
   RUS.41.t:0 "Death, Taxes, And Royalty"
   RUS.41.d:0 ""
-  RUS.41.a:0 ""
-  RUS.41.b:0 ""
-  RUS.41.c:0 ""
+  RUS.41.a:0 "Play As Kirill"
+  RUS.41.b:0 "Play As Alexandra"
+  RUS.41.c:0 "Play As Alexei"
   RUS.42.t:0 "Operation: Skazki"
   RUS.42.d:0 ""
   RUS.42.a:0 ""
@@ -412,7 +426,7 @@
   PB_RUS_Know_Your_Enemy:0 "Know Your Enemy"
   PB_RUS_Know_Your_Enemy_desc:0 "He who dare questions the Tsar is not only an enemy, but a parasite, one that must be removed. But such parasites live in hosts, habitable alien bodies which they call home. It is not enough to simply kill the parasite, we must poison any possible home to drive it to extinction. Unfortuantely some individuals require a helping hand or two; luckily we have more than enough to go around."
   PB_RUS_The_Veteran_Issue:0 "The Veteran Issue"
-  PB_RUS_The_Veteran_Issue_desc:0 "Large amounts of unemployed veterans roam the streets of Russia. As sad as it is they have proven a painful existance, many of which have turned to a life of crime or found solace in alcohlol. Adding to that is a rather outdated command structure; generals and field marshals bathe in old war ideas and strategies. If Russia is to survive the century she must adapt and evolve."
+  PB_RUS_The_Veteran_Issue_desc:0 "Large amounts of unemployed veterans roam the streets of Russia. As sad as it is they have proven a painful existance, many of which have turned to a life of crime or found solace in alcohol. Adding to that is a rather outdated command structure; generals and field marshals bathe in old war ideas and strategies. If Russia is to survive the century she must adapt and evolve."
   PB_RUS_Russias_Holiest_Day:0 "Russia's Holiest Day"
   PB_RUS_Russias_Holiest_Day_desc:0 "Russia for the briefest of seconds laid quitely. Its factories remained shut after years of operation, its people stayed in doors to hide from the Black Hundreds, and the political officials called in sick to avoid any bureaucratic responsibility for the hell that was about to unfold. And for the Tsar, well he laid frozen still, barely able to move a finger. By midnight the Tsar of holy Russia was declared dead and Moscow lit up in flames as a result; years of political abuse gave way to a melting pot of ideologies and the Year of Strife officially concluded."
 
