VP changes, State name fix

--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -238,7 +238,7 @@
  VICTORY_POINTS_11370:0 "Minsk"
  VICTORY_POINTS_11437:0 "Dnipropetrovsk"
  VICTORY_POINTS_11670:0 "Odessa"
- VICTORY_POINTS_12189:0 "Hafu"
+ VICTORY_POINTS_12189:0 "Amur"
  VICTORY_POINTS_12320:0 "Yerevan"
  VICTORY_POINTS_10627:0 "Kyzyl"
  VICTORY_POINTS_4801:0 "Urga"
@@ -303,7 +303,7 @@
  VICTORY_POINTS_10125:0 "Nagoya"
  VICTORY_POINTS_10444:0 "Sapporo"
  VICTORY_POINTS_12421:0 "Asahigawa"
- VICTORY_POINTS_12446:0 "Toyohara"
+ VICTORY_POINTS_12446:0 "Vladimirovka"
  VICTORY_POINTS_11932:0 "Naha"
  VICTORY_POINTS_1150:0 "Ryojun"
  VICTORY_POINTS_4572:0 "Hsinking"
@@ -666,3 +666,21 @@
  VICTORY_POINTS_9909:0 "Nice"
  VICTORY_POINTS_575:0 "Dunkirk"
  VICTORY_POINTS_480:0 "Terneuzen"
+ VICTORY_POINTS_6668:0 "Besancon"
+ VICTORY_POINTS_11535:0 "Caen"
+ VICTORY_POINTS_3655:0 "Bourges"
+ VICTORY_POINTS_620:0 "Limoges"
+ VICTORY_POINTS_11699:0 "Pau"
+ VICTORY_POINTS_11877:0 "Nimes"
+ VICTORY_POINTS_958:0 "Avignon"
+ VICTORY_POINTS_6786:0 "Saint-Etienne"
+ VICTORY_POINTS_9593:0 "Clermont-Ferrand"
+ VICTORY_POINTS_11732:0 "Chalons-en-Champagne"
+ VICTORY_POINTS_11483:0 "Lille"
+ VICTORY_POINTS_9478:0 "Angers"
+ VICTORY_POINTS_11463:0 "Le Mans"
+ VICTORY_POINTS_9853:0 "Perpignan"
+ VICTORY_POINTS_629:0 "Poitiers"
+ VICTORY_POINTS_762:0 "Valence"
+ VICTORY_POINTS_6609:0 "Chambery"
+ VICTORY_POINTS_3928:0 "Cannes"
