you now have the ability to remove all active state focuses

--- a/localisation/PB_State_Focus_l_english.yml
+++ b/localisation/PB_State_Focus_l_english.yml
@@ -24,3 +24,5 @@ State_Focus_Five:0 "£pol_idea Resource Extraction Investments"
 PB_Inc_Max_State_Focus:0 "Active State Focus Cap Increases By §G+1§!"
 PB_Dec_Max_State_Focus:0 "Active State Focus Cap Decreases By §R-1§!"
 PB_Set_Max_State_Focus:0 "Active State Focus Cap Set To §Y2§!"
+
+PB_State_Focus_Delete_All:0 "Remove All Active State Focuses"
